# muffinbot

./: Cargo.toml  bans  kicks
.github/workflows/: rust.yml
src/: logger.rs  main.rs
